fix: Change gap in grid

--- a/src/css/partials/footer.scss
+++ b/src/css/partials/footer.scss
@@ -4,11 +4,15 @@
 .footer {
   display: grid;
   grid-template-columns: 15vw 1fr 1fr 15vw;
-  gap: 0 3rem;
+  gap: 0 2rem;
   color: $white;
   padding: 10vw 15vw;
   background-color: $primary;
   letter-spacing: 1.2px;
+
+  @media (min-width: $desktop) {
+    gap: 0 4rem;
+  }
 
   &__about {
     &-title {
@@ -76,6 +80,11 @@
           width: 100%;
           top: 1.8rem;
         }
+
+        @media (min-width: $ultra) {
+          width: 70%;
+          top: 1.8rem;
+        }
       }
     }
 
@@ -86,16 +95,19 @@
 
   &__contact {
     &-logo {
-      @media (max-width: $laptop) {
-        width: 70px;
-        height: 50px;
-      }
+      // max-width: 20%;
 
-      @media (max-width: $mobile) {
-        width: 90px;
-        height: 70px;
-        margin-bottom: 1rem;
-      }
+      // @media (max-width: $laptop) {
+      //   max-width: 50%;
+      // }
+
+      // @media (min-width: $tablet) {
+      //   max-width: 50%;
+      // }
+
+      // @media (min-width: $laptop) {
+      //   max-width: 38%;
+      // }
     }
 
     .phone svg,
@@ -107,12 +119,6 @@
         max-width: 20px;
       }
     }
-
-    .copyright {
-      font-size: 0.6rem;
-      font-weight: lighter;
-      opacity: 0.5;
-    }
   }
 }
 
@@ -121,6 +127,10 @@
 .mail {
   display: flex;
   place-items: center;
+
+  @media (min-width: $laptop) {
+    margin: 10px 0;
+  }
 
   & a {
     width: 25px;
